--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "ownerNumber": ["6289517185039@s.whatsapp.net","6289517185039@s.whatsapp.net"],
-    "ownerName": "Call Me Zaa🐧",
+    "ownerName": "Call Me Kimkimabot",
     "instagram" : "https://instagram.com/nicetry.zaa._",
-    "botName": "Pizzaa🐧-Mdོ ",
+    "botName": "Kimkimabot-Mdོ ",
     "footer": "api.zeeoneofc.xyz",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
